# ps_invoice_generator

./: Cargo.toml
src/: lib.rs  main.rs  pdf_generator.rs  ps.rs  request_manager.rs  system_utils.rs
src/ps/: client.rs  order_invoice.rs
