[package]
name = "ps_invoice_generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
base64 = "0.21.0"
serde = { version = "1.0.157", features = ["derive"] }
serde_json = "1.0.94"
printpdf = "0.5.3"
indoc = "2.0.1"